--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -802,25 +802,22 @@ td.no {
 }
 
 .moadal_in {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  left: 0;
-  bottom: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.699);
-  z-index: 3333;
+    justify-content: center;
+    align-items: center;
+    left: 0;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.699);
+    z-index: 3333;
+    background: transparent;
+    backdrop-filter: blur(4px);
 }
 
 .modal {
+  position: absolute;
   display: none;
   width: 100%;
   height: 100%;
