--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -695,12 +695,15 @@ td.no {
     align-items: center;
     left: 0;
     bottom: 0;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.699);
     z-index: 3333;
-}
+    background: transparent;
+    backdrop-filter: blur(4px);
+    }
+
 
 .modal {
     display: none;
