--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,8 @@
   list-style: none;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  border: none;
+  outline: none;
 }
 
 html,
@@ -802,22 +804,30 @@ td.no {
 }
 
 .moadal_in {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-    justify-content: center;
-    align-items: center;
-    left: 0;
-    bottom: 0;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.699);
-    z-index: 3333;
-    background: transparent;
-    backdrop-filter: blur(4px);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  left: 0;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.699);
+  z-index: 3333;
+  background: transparent;
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
 }
 
 .modal {
-  position: absolute;
+  z-index: 14444;
+  position: fixed;
   display: none;
   width: 100%;
   height: 100%;
@@ -832,7 +842,7 @@ td.no {
 .former {
   position: relative;
   background-color: #fff;
-  padding: 8px;
+  padding: 1rem;
   width: 30%;
   height: 80%;
 }
@@ -851,15 +861,12 @@ td.no {
 }
 
 .formulair_titre {
-  border-bottom: 3px solid orangered;
   margin-bottom: 20px;
   text-align: center;
   text-transform: uppercase;
   font-size: 25px;
-  color: #fff;
-  padding: 8px;
+  color: #02297c;
   width: 100%;
-  background-color: #1c2128;
 }
 
 .vertical_nav_btns {
@@ -885,6 +892,9 @@ td.no {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .vertical_nav_btns .vertical-in button,
@@ -942,26 +952,36 @@ td.no {
 }
 
 .btn_closer_params {
-  font-size: 23px;
+  background-color: transparent;
+  font-size: 30px;
   color: #fff;
   width: 100%;
   margin-bottom: 35px;
   text-align: center;
   padding-bottom: 20px;
-  border-bottom: 1px solid;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .formg {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
+  padding: 1rem;
 }
 
 .formg > input {
-  border: 2px solid black;
-  border-radius: 5px;
-  background-color: #183863;
-  color: #fff;
+  border: none;
+  background-color: #c7d8d4;
+  color: #424242;
   width: 100%;
-  padding: 10px;
+  padding: 1rem;
 }
 
 .formg > select {
@@ -998,10 +1018,8 @@ td.no {
 }
 
 .btns {
-  padding: 6px;
   bottom: 0;
   width: 100%;
-  position: absolute;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   display: -webkit-box;
@@ -1011,16 +1029,16 @@ td.no {
 
 .ajouter_elev {
   color: #fff;
-  background-color: green;
+  background-color: #2d962d;
 }
 
 .annuler {
   color: #fff;
-  background-color: red;
+  background-color: #fc3d3d;
 }
 
 .btn {
-  padding: 10px 20px;
+  padding: 15px 56px;
   border: none;
 }
 
@@ -1429,6 +1447,29 @@ th {
   text-align: center;
 }
 
+.okbtn {
+  width: 30px;
+  height: 30px;
+  font-size: 12px;
+  border-radius: 50%;
+}
+
+.goupper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.goupper input {
+  width: 80%;
+  padding: .5rem;
+  font-size: 20px;
+  color: #fff;
+}
+
 /****types of inputs *****/
 .long-input {
   width: 300px;
@@ -1539,11 +1580,10 @@ th {
 
 .pea {
   cursor: pointer;
-  padding: 0px 8px;
-  font-size: 20px;
+  background-color: transparent;
+  border: none;
+  font-size: 30px;
   color: #fff;
-  background: #ff2839;
-  border-radius: 0px 20px 20px 0px;
 }
 
 /************ecran d'edition eleves *********/
@@ -1648,7 +1688,6 @@ label {
   font-weight: bolder;
   cursor: pointer;
   min-width: 100px !important;
-  border-radius: 5px;
   padding: 5px 10px;
   background-color: #f54444;
   margin-bottom: 3px;
