--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,8 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    border: none;
+    outline: none;
 }
 
 html,
@@ -706,6 +708,8 @@ td.no {
 
 
 .modal {
+    z-index: 14444;
+    position: fixed;
     display: none;
     width: 100%;
     height: 100%;
@@ -718,7 +722,7 @@ td.no {
 .former {
     position: relative;
     background-color: #fff;
-    padding: 8px;
+    padding:1rem ;
     width: 30%;
     height: 80%;
 }
@@ -733,15 +737,15 @@ td.no {
 }
 
 .formulair_titre {
-    border-bottom: 3px solid orangered;
+   
     margin-bottom: 20px;
     text-align: center;
     text-transform: uppercase;
     font-size: 25px;
-    color: #fff;
-    padding: 8px;
+    color: rgb(2, 41, 124);
+  
     width: 100%;
-    background-color: #1c2128;
+
 }
 
 .vertical_nav_btns {
@@ -757,6 +761,7 @@ td.no {
         display: flex;
         justify-content: center;
         flex-direction: column;
+    align-items: center;
         button,
         a {
             cursor: pointer;
@@ -800,26 +805,31 @@ td.no {
 }
 
 .btn_closer_params {
-    font-size: 23px;
+    background-color: transparent;
+    font-size: 30px;
     color: #fff;
     width: 100%;
     margin-bottom: 35px;
     text-align: center;
     padding-bottom: 20px;
-    border-bottom: 1px solid;
+border: none;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 .formg {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
+    padding: 1rem;
 }
 
 .formg>input {
-    border: 2px solid black;
-    border-radius: 5px;
-    background-color: #183863;
-    color: #fff;
+    border: none;
+
+    background-color: #c7d8d4;
+    color: #424242;
     width: 100%;
-    padding: 10px;
+    padding: 1rem;
 }
 
 .formg>select {
@@ -853,26 +863,25 @@ td.no {
 }
 
 .btns {
-    padding: 6px;
     bottom: 0;
     width: 100%;
-    position: absolute;
+
     justify-content: space-around;
     display: flex;
 }
 
 .ajouter_elev {
     color: #fff;
-    background-color: green;
+    background-color: rgb(45, 150, 45);
 }
 
 .annuler {
     color: #fff;
-    background-color: red;
+    background-color: rgb(252, 61, 61);
 }
 
 .btn {
-    padding: 10px 20px;
+    padding: 15px 56px;
     border: none;
 }
 
@@ -1214,6 +1223,25 @@ th {
 }
 
 
+.okbtn{
+    width: 30px;
+    height: 30px;
+    font-size: 12px;
+    border-radius: 50%;
+}
+
+.goupper{
+    display: flex;
+    align-items: center;
+
+    input{
+        width: 80%;
+        padding: .5rem;
+        font-size: 20px;
+        color: #fff;
+    }
+}
+
 /****types of inputs *****/
 
 .long-input {
@@ -1306,11 +1334,11 @@ th {
 
 .pea {
     cursor: pointer;
-    padding: 0px 8px;
-    font-size: 20px;
+background-color: transparent;
+border: none;
+    font-size: 30px;
     color: #fff;
-    background: #ff2839;
-    border-radius: 0px 20px 20px 0px;
+
 }
 
 
@@ -1393,7 +1421,6 @@ label {
     font-weight: bolder;
     cursor: pointer;
     min-width: 100px !important;
-    border-radius: 5px;
     padding: 5px 10px;
     background-color: rgb(245, 68, 68);
     margin-bottom: 3px;
