--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1191,6 +1191,14 @@ th {
 
 /********loading page***********/
 /********liste modale******/
+.delete_etablissement_button {
+  cursor: pointer;
+}
+
+.activated {
+  background-color: #7a8b9b !important;
+}
+
 .bar {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1814,6 +1822,10 @@ label {
   font-size: 9px;
 }
 
+.activeEtablissementClasse {
+  background-color: #0053a0 !important;
+}
+
 .avide {
   font-size: 12px;
   padding: 4px;
@@ -1845,4 +1857,31 @@ label {
   height: 100%;
   border: 0px;
 }
-/*# sourceMappingURL=style.css.map */
+
+.selectes_types .formga {
+  position: relative;
+}
+
+.selectes_types .formga input {
+  background-color: red;
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.settingsLayer {
+  -webkit-transition: .5s;
+  transition: .5s;
+  position: fixed;
+  -webkit-transform: translate(-100%);
+          transform: translate(-100%);
+  z-index: 150;
+  width: 100%;
+  background: #011729;
+}
+
+.openSettingsLayer {
+  -webkit-transform: translate(0%) !important;
+          transform: translate(0%) !important;
+}
