--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1565,6 +1565,10 @@ label {
     background: rgb(1, 23, 41);
 }
 
+.lowcolor {
+    color: #ffffff54 !important;
+}
+
 .openSettingsLayer {
     transform: translate(0%)!important;
 }
